@@ -1,9 +1,9 @@
 package magpiebridge.projectservice.java;
 
+import com.google.common.base.Strings;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -13,19 +13,21 @@ import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
-import java.util.List;
+import java.util.LinkedHashSet;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Logger;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 /**
  * @author George Fraser
  * @see https://github.com/georgewfraser/java-language-server.git
- *     <p>Modified and extended by Linghui Luo
+ *     <p>Modified and extended by Linghui Luo & Christian Brüggemann
  */
 public class InferConfig {
   private static final Logger LOG = Logger.getLogger("main");
@@ -63,6 +65,13 @@ public class InferConfig {
   }
 
   private static Path defaultGradleHome() {
+    String gradleUserHome = System.getenv("GRADLE_USER_HOME");
+    if (gradleUserHome != null
+        && !gradleUserHome.isEmpty()
+        && Files.exists(Paths.get(gradleUserHome))) {
+      return Paths.get(gradleUserHome);
+    }
+
     return Paths.get(System.getProperty("user.home")).resolve(".gradle");
   }
 
@@ -70,7 +79,9 @@ public class InferConfig {
   public Set<Path> classPath() {
     HashSet<Path> result = new HashSet<Path>();
     result.addAll(buildClassPath());
-    result.addAll(workspaceClassPath());
+    Set<Path> workspaceClassPath = workspaceClassPath();
+    LOG.info("Workspace Class Path:" + workspaceClassPath);
+    result.addAll(workspaceClassPath);
     return result;
   }
 
@@ -91,7 +102,9 @@ public class InferConfig {
     // Maven
     if (Files.exists(workspaceRoot.resolve("pom.xml"))) {
       try {
-        return Files.walk(workspaceRoot).flatMap(this::outputDirectory).collect(Collectors.toSet());
+        return Files.walk(workspaceRoot)
+            .flatMap(this::mavenOutputDirectory)
+            .collect(Collectors.toSet());
       } catch (IOException e) {
         throw new RuntimeException(e);
       }
@@ -106,11 +119,20 @@ public class InferConfig {
       }
     }
 
+    // Gradle
+    if (hasGradleProject()) {
+      return Stream.of(
+              workspaceRoot.resolve("build").resolve("intermediates").resolve("javac"),
+              workspaceRoot.resolve("build").resolve("classes"))
+          .filter(Files::exists)
+          .collect(Collectors.toSet());
+    }
+
     return Collections.emptySet();
   }
 
   /** Recognize build root files like pom.xml and return compiler output directories */
-  public Stream<Path> outputDirectory(Path file) {
+  public Stream<Path> mavenOutputDirectory(Path file) {
     if (file.getFileName().toString().equals("pom.xml")) {
       Path target = file.resolveSibling("target");
 
@@ -118,8 +140,6 @@ public class InferConfig {
         return Stream.of(target.resolve("classes"), target.resolve("test-classes"));
       }
     }
-
-    // TODO gradle
 
     return Stream.empty();
   }
@@ -171,6 +191,15 @@ public class InferConfig {
         result.addAll(jars);
       }
       return result;
+    }
+
+    // Gradle
+    if (hasGradleProject()) {
+      return gradleDependencies().stream()
+          .map(dep -> findGradleJar(dep, false))
+          .filter(Optional::isPresent)
+          .map(Optional::get)
+          .collect(Collectors.toSet());
     }
 
     return Collections.emptySet();
@@ -254,16 +283,29 @@ public class InferConfig {
 
     // Maven
     if (Files.exists(workspaceRoot.resolve("pom.xml"))) {
-      Set<Path> result = new HashSet<Path>();
+      Set<Path> result = new HashSet<>();
       for (Artifact a : mvnDependencies()) {
         findMavenJar(a, true).ifPresent(result::add);
       }
       return result;
     }
-    // TODO Gradle
+
+    // Gradle
+    if (hasGradleProject()) {
+      return gradleDependencies().stream()
+          .map(dep -> findGradleJar(dep, true))
+          .filter(Optional::isPresent)
+          .map(Optional::get)
+          .collect(Collectors.toSet());
+    }
+
     // TODO Bazel
 
     return Collections.emptySet();
+  }
+
+  private boolean hasGradleProject() {
+    return Files.exists(workspaceRoot.resolve("build.gradle"));
   }
 
   private Optional<Path> findAnyJar(Artifact artifact, boolean source) {
@@ -283,12 +325,21 @@ public class InferConfig {
             .resolve(artifact.artifactId)
             .resolve(artifact.version)
             .resolve(fileName(artifact, source));
-
     if (Files.exists(jar)) {
       return Optional.of(jar);
     } else {
       return Optional.empty();
     }
+  }
+
+  private static String toGlobPathPart(Path path) {
+    Path absolutePath = path.toAbsolutePath();
+    String root = Strings.nullToEmpty(absolutePath.getRoot().toString()).replace('\\', '/');
+
+    return root
+        + StreamSupport.stream(absolutePath.spliterator(), false)
+            .map(p -> p.getFileName().toString())
+            .collect(Collectors.joining("/"));
   }
 
   private Optional<Path> findGradleJar(Artifact artifact, boolean source) {
@@ -298,8 +349,8 @@ public class InferConfig {
     String pattern =
         "glob:"
             + String.join(
-                File.separator,
-                base.toString(),
+                "/", // File.separator does *not* work on Windows
+                toGlobPathPart(base),
                 "modules-*",
                 "files-*",
                 artifact.groupId,
@@ -320,54 +371,114 @@ public class InferConfig {
     return artifact.artifactId + '-' + artifact.version + (source ? "-sources" : "") + ".jar";
   }
 
-  private static List<Artifact> dependencyList(Path pomXml) {
-    Objects.requireNonNull(pomXml, "pom.xml path is null");
-
+  private Collection<Artifact> mvnDependencies() {
+    Path pomXml = workspaceRoot.resolve("pom.xml");
     try {
-      // Tell maven to output deps to a temporary file
-      Path outputFile = Files.createTempFile("deps", ".txt");
-
-      // TODO consider using mvn dependency:copy-dependencies instead
-      String cmd =
-          String.format(
-              "%s dependency:list -DincludeScope=test -DoutputFile=%s",
-              getMvnCommand(), outputFile);
-      File workingDirectory = pomXml.toAbsolutePath().getParent().toFile();
-      int result = Runtime.getRuntime().exec(cmd, null, workingDirectory).waitFor();
-
-      if (result != 0) {
-        throw new RuntimeException("`" + cmd + "` returned " + result);
+      if (Files.exists(pomXml)) {
+        Objects.requireNonNull(pomXml, "pom.xml path is null");
+        Process dependencyListing =
+            new ProcessBuilder()
+                .directory(workspaceRoot.toFile())
+                .command(getMvnCommand(), "dependency:list")
+                .start();
+        Pattern dependencyPattern = Pattern.compile(".*\\s{2}(.*):(.*):(.*):(.*):(.*)");
+        BufferedReader reader =
+            new BufferedReader(new InputStreamReader(dependencyListing.getInputStream()));
+        Set<Artifact> dependencies = new LinkedHashSet<>();
+        reader
+            .lines()
+            .map(dependencyPattern::matcher)
+            .filter(Matcher::find)
+            .map(matcher -> new Artifact(matcher.group(1), matcher.group(2), matcher.group(4)))
+            .forEach(dependencies::add);
+        LOG.info("Maven Dependencies: " + dependencies);
+        return dependencies;
       }
-
-      return readDependencyList(outputFile);
-    } catch (InterruptedException | IOException e) {
+    } catch (IOException e) {
       throw new RuntimeException(e);
     }
+    return Collections.emptyList();
   }
 
-  private static List<Artifact> readDependencyList(Path outputFile) {
-    Pattern artifact = Pattern.compile(".*:.*:.*:.*:.*");
+  private Collection<Artifact> gradleDependencies() {
+    String gradleBinary = getGradleBinary().toString();
 
-    try (InputStream in = Files.newInputStream(outputFile)) {
-      return new BufferedReader(new InputStreamReader(in))
-          .lines()
-          .map(String::trim)
-          .filter(line -> artifact.matcher(line).matches())
-          .map(Artifact::parse)
-          .collect(Collectors.toList());
+    try {
+      // Find all subprojects
+      Pattern projectPattern = Pattern.compile("project '(.*)'$");
+      LOG.info("Running " + gradleBinary + " projects");
+      Process projectsListing =
+          new ProcessBuilder()
+              .directory(workspaceRoot.toFile())
+              .command(gradleBinary, "projects")
+              .start();
+      Set<String> subProjects;
+      try (BufferedReader reader =
+          new BufferedReader(new InputStreamReader(projectsListing.getInputStream()))) {
+        subProjects =
+            reader
+                .lines()
+                .filter(line -> !line.isEmpty() && !line.startsWith("Root project"))
+                .map(projectPattern::matcher)
+                .filter(Matcher::find)
+                .map(matcher -> matcher.group(1))
+                .collect(Collectors.toCollection(LinkedHashSet::new)); // Ensures
+        // mutability
+        subProjects.add(""); // Add root project
+      }
+      LOG.info("Gradle Subprojects: " + subProjects);
+
+      // For each subproject, collect dependencies
+      Pattern dependencyPattern = Pattern.compile("--- (.*):(.*):(.*)");
+      Set<Artifact> dependencies = new LinkedHashSet<>();
+      for (String subProject : subProjects) {
+        LOG.info("Running " + gradleBinary + " " + subProject + ":dependencies");
+        Process dependencyListing =
+            new ProcessBuilder()
+                .directory(workspaceRoot.toFile())
+                .command(gradleBinary, subProject + ":dependencies")
+                .start();
+        try (BufferedReader reader =
+            new BufferedReader(new InputStreamReader(dependencyListing.getInputStream()))) {
+          reader
+              .lines()
+              .map(dependencyPattern::matcher)
+              .filter(Matcher::find)
+              .map(matcher -> new Artifact(matcher.group(1), matcher.group(2), matcher.group(3)))
+              .forEach(dependencies::add);
+        }
+      }
+      LOG.info("Gradle Dependencies: " + dependencies);
+
+      return dependencies;
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
   }
 
-  private Collection<Artifact> mvnDependencies() {
-    Path pomXml = workspaceRoot.resolve("pom.xml");
+  private Path getGradleBinary() {
+    boolean isWindows = System.getProperty("os.name").startsWith("Windows");
 
-    if (Files.exists(pomXml)) {
-      return dependencyList(pomXml);
+    // Try gradle wrapper
+    if (isWindows) {
+      Path gradlewBat = workspaceRoot.resolve("gradlew.bat");
+      if (Files.exists(gradlewBat)) {
+        return gradlewBat;
+      }
+    } else {
+      Path gradlew = workspaceRoot.resolve("gradlew");
+      if (Files.exists(gradlew)) {
+        return gradlew;
+      }
     }
 
-    return Collections.emptyList();
+    // Try system-wide gradle installation
+    String gradlePath = findExecutableOnPath("gradle");
+    if (gradlePath != null && Files.exists(Paths.get(gradlePath))) {
+      return Paths.get(gradlePath);
+    }
+
+    throw new RuntimeException("Could not find gradle binary.");
   }
 
   private static String getMvnCommand() {
